@@ -128,8 +128,13 @@ Command line options
 -basic                Turn on Atari BASIC ROM
 
 -cart <filename>      Insert cartridge (CART or raw format)
+-cart-type <0..43>    Select type of cartridge inserted with -cart. 0 means
+                      no cartridge, and other values indicate a specific
+                      cartridge type as in cart.txt.
 -cart2 <filename>     Insert second cartridge (CART or raw format)
-                        Only if first cartridge is SpartaDOS X (64 or 128)
+                      Only if first cartridge is SpartaDOS X (64 or 128)
+-cart2-type <0..43>   Similar to -cart-type. Select type of cartridge inserted
+                      with -cart2.
 
 -run <filename>       Run Atari program (EXE, COM, XEX, BAS, LST)
 
